# ExecuteLine

./: README.md  setup.cfg
execline/: execute.py
execute/: execute.py  testing.py
executeline/: __init__.py
inline_ex/: __init__.py
src/execline/: __init__.py
