[metadata]
name = ExecuteLine
version = 0.1.0
author = ToorajJahangiri
author_email = Toorajjahangiri@gmail.com
license = MIT
url = https://github.com/Class-Tooraj/ExecuteLine
description = Execute Callable Object in Line. ONE BY ONE.
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7.*

[options.packages.find]
exclude =
    test*
    testing*
    __pycache__
